   on realtime updates.

MGCP Changes
------------
 * Added ability to preset channel variables on indicated lines with the setvar
   configuration option.  Also, clearvars=all resets the list of variables back
   to none.
 * PacketCable NCS 1.0 support has been added for Docsis/Eurodocsis Networks.
   See configs/res_pktccops.conf for more information.

Applications
------------
 * Added "ready" option to QUEUE_MEMBER counting to count free agents who's wrap-up
   timeout has expired.
 * Added 'R' option to app_queue.  This option stops moh and indicates ringing
   to the caller when an Agent's phone is ringing.  This can be used to indicate
   to the caller that their call is about to be picked up, which is nice when
   one has been on hold for an extened period of time.
 * Added .m3u support for Mp3Player application.
 * Added progress option to the app_dial D() option.  When progress DTMF is
   present, those values are sent immediately upon receiving a PROGRESS message
   regardless if the call has been answered or not.
 * Added functionality to the app_dial F() option to continue with execution
   at the current location when no parameters are provided.
 * Added the 'a' option to app_dial to answer the calling channel before any
   announcements or macros are executed.
 * Modified app_dial to set answertime when the called channel answers even if
   the called channel hangs up during playback of an announcement.
 * Modified app_dial 'r' option to support an additional parameter to play an
   indication tone from indications.conf
 * Added c() option to app_chanspy. This option allows custom DTMF to be set
   to cycle through the next available channel.  By default this is still '*'.
 * Added x() option to app_chanspy.  This option allows DTMF to be set to
   exit the application.
 * The Voicemail application has been improved to automatically ignore messages
   that only contain silence.
 * If you set maxmsg to 0 in voicemail.conf, Voicemail will consider the