@@ -72,6 +72,8 @@ MGCP Changes
 
 Applications
 ------------
+ * Added 'p' option to PickupChan() to allow for picking up channel by the first
+   match to a partial channel name.
  * Added "ready" option to QUEUE_MEMBER counting to count free agents who's wrap-up
    timeout has expired.
  * Added 'R' option to app_queue.  This option stops moh and indicates ringing
